Reuse executors more